k8s/06-mail-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mailserver
  namespace: dpsrv
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/default
  tcp:
  - match:
    - port: 25
    route:
    - destination:
        host: mailserver.dpsrv.svc.cluster.local
        port:
          number: 25
  - match:
    - port: 465
    route:
    - destination:
        host: mailserver.dpsrv.svc.cluster.local
        port:
          number: 465
  - match:
    - port: 587
    route:
    - destination:
        host: mailserver.dpsrv.svc.cluster.local
        port:
          number: 587
  - match:
    - port: 143
    route:
    - destination:
        host: mailserver.dpsrv.svc.cluster.local
        port:
          number: 143
  - match:
    - port: 993
    route:
    - destination:
        host: mailserver.dpsrv.svc.cluster.local
        port:
          number: 993
